kubernetes/apps/selfhosted-apps/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name netbox
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: netbox.svg
    gethomepage.dev/name: Netbox
    gethomepage.dev/group: Service
spec:
  hostnames: ["netbox.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system

  rules:
    - backendRefs:
        - name: *name
          port: 80
